--- a/Html5/Day3/First.html
+++ b/Html5/Day3/First.html
@@ -2,10 +2,40 @@
 <html>
 	<head>
 		<meta charset="utf-8"/>
+		<!--[if lt IE 9]>
+			<script src="http://github.com/aFarkas/html5shiv/blob/master/dist/html5shiv.js"></script>
+		<![endif]-->
 		<link rel="stylesheet" href="style.css"/>
 		<title>Ma Page</title>
 	</head>
 	<body>
-		<p>COUCOU</p>
+		<header>HEADER</header>
+		<nav>NAV
+			<ul>
+				<li>ligne</li>
+				<li>ligne</li>
+				<li>ligne</li>
+				<li>ligne</li>
+				<li>ligne</li>
+			</ul>
+		</nav>
+		<section>SECTION</section>
+		<article>ARTICLE</article>
+		<aside>
+			<p>
+			mon paragraphe à l'intérieur de mon aside
+			</p>
+			<p>
+			ceci est un autre paragraphe
+			ceci est un autre paragraphe
+			ceci est un autre paragraphe
+			ceci est un autre paragraphe
+			ceci est un autre paragraphe
+			ceci est un autre paragraphe
+			ceci est un autre paragraphe
+			ceci est un autre paragraphe
+			</p>
+		</aside>
+		<footer>FOOTER</footer>
 	</body>
 </html>
