--- a/Html5/Day3/First.html
+++ b/Html5/Day3/First.html
@@ -9,7 +9,9 @@
 		<title>Ma Page</title>
 	</head>
 	<body>
-		<header>HEADER</header>
+		<header>
+			<h1>HEADER</h1>
+		</header>
 		<nav>NAV
 			<ul>
 				<li>ligne</li>
