--- a/Html5/Day4/First.html
+++ b/Html5/Day4/First.html
@@ -6,20 +6,40 @@
 		<title>Mon site web</title>
 	</head>
 	<body>
-		<header>
-			<h1>HEADER</h1>
-		</header>
-		<nav>NAV
-			<ul>
-				<li>ligne</li>
-			</ul>
-		</nav>
-		<section>SECTION</section>
-		<article>ARTICLE</article>
-		<aside>
-			<p>
-			</p>
-		</aside>
-		<footer>FOOTER</footer>
+		<div id="blocpage">
+			<header>
+				<div id="titreprincipal">
+					<img src="images/ballon.jpg" alt="ballon" id="logo"/>
+					<h1>Fan de rugby</h1>
+					<h2>et de l'USAP surtout...</h2>
+				</div>
+				<nav>
+					<ul>
+						<li><a href="#">Accueil</a></li>
+						<li><a href="#">Blog</a></li>
+						<li><a href="#">CV</a></li>
+						<li><a href="#">Contact</a></li>
+					</ul>
+				</nav>
+			</header>
+			<div id="banniere_image">
+			
+			</div>
+			<section>
+				<article>
+					<h1>MonH1DansMaSection</h1>
+					<p>MonPDansMaSection</p>
+				</article>
+				<aside>
+					MonAside
+				</aside>
+			</section>
+			<footer>
+				<div id="tweets">
+				</div>
+				<div id ="photos">
+				</div>
+			</footer>
+		</div>
 	</body>
 </html>
