--- a/Html5/Atelier/MonCV.html
+++ b/Html5/Atelier/MonCV.html
@@ -7,23 +7,34 @@
 	</head>
 	
 	<body>
-		<span class="photo"><p><h1 class="titre">Joël SIDOS</h1></p>
+		<span class="photo"><a href="photos/maphotobig.jpg" ><img src="photos/maphoto.jpg" alt="ma photo"/></a></span>
+		
+		<p><h1 class="titre">Joël SIDOS</h1></p>
+		
 		<p><h1 class="poste">Chef de Produit Framework, CEGID</h1></p>
-		<a href="photos/maphotobig.jpg" ><img src="photos/maphoto.jpg" alt="ma photo"/></a></span>
+		
 		<p><h2>Mon expérience</h2></p>
-		<p><ul class="liste">
-		<li ><strong>De 2005 à aujourd'hui : </strong> <em>Cegid : </em> Chef de produit Cegid Business Platform. Program manager.</li>
-		<li><strong>De 2002 à 2005 : </strong> <em>Apside :</em> Ingénieur d'études. </li>
-		</ul></p>
+		<p>
+			<ul class="liste">
+				<li ><strong>De 2005 à aujourd'hui : </strong> <em>Cegid : </em> Chef de produit Cegid Business Platform. Program manager.</li>
+				<li><strong>De 2002 à 2005 : </strong> <em>Apside :</em> Ingénieur d'études. </li>
+			</ul>
+		</p>
+		
 		<p><h2>Mes compétences</h2></p>
-		<p><ul class="liste">
-		<li><strong>Langages :</strong> HTML5 (<a href="files/certif.txt">Certificat OpenClassRoom</a>), CSS3, SQL ...</li>
-		<li><strong>SGBD :</strong> SQL Server, Oracle, Progress ...</li>
-		<li><strong>... </strong></li>
-		</ul></p>
+		<p>
+			<ul class="liste">
+				<li><strong>Langages :</strong> HTML5 (<a href="files/certif.txt">Certificat OpenClassRoom</a>), CSS3, SQL ...</li>
+				<li><strong>SGBD :</strong> SQL Server, Oracle, Progress ...</li>
+				<li><strong>... </strong></li>
+			</ul>
+		</p>
+		
 		<p><h2>Ma formation</h2></p>
-		<p><ul>
-		<li>Elle me plait <span class="enphase">bien </span>cette formation ...</li>
-		</ul></p>
+		<p>
+			<ul>
+				<li>Elle me plait <span class="enphase">bien </span>cette formation ...</li>
+			</ul>
+		</p>
 	</body>
 </html>
